# manudped-rss-trans

./: README.md  deploy.sh
app/: Cargo.toml
app/src/: main.rs
infrastructure/: api_gateway.tf  lambda.tf
