[package]
name = "manudped-rss-trans"
version = "0.1.0"
authors = ["Supanat Pothivarakorn <supanat.ptk@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0"
lambda_runtime = "0.1.0"
log = "^0.4"
simple_logger = "1.0.1"
rss = { version = "1.6", features = ["from_url"] }